manifests/base/resources/insights/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9292"
    prometheus.io/scrape: "true"
  labels:
    app: insights
    chart: insights-1.9.0
    heritage: Helm
    release: insights
  name: insights
spec:
  ports:
  - name: insights
    port: 9292
    targetPort: 9292
  selector:
    app: insights
---
