manifests/base/resources/insights/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://insights-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
  labels:
    app: insights
    chart: insights-1.9.0
    heritage: Helm
    release: insights
  name: insights-api
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: insights
          servicePort: 9292
        path: /api/v1/insights
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://$host/login?returnto=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://insights-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/rewrite-target: /insight
  labels:
    app: insights
    chart: insights-1.9.0
    heritage: Helm
    release: insights
  name: insights-insight
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: insights
          servicePort: 9292
        path: /insight
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://$host/login?returnto=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://insights-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/rewrite-target: /share
  labels:
    app: insights
    chart: insights-1.9.0
    heritage: Helm
    release: insights
  name: insights-share
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: insights
          servicePort: 9292
        path: /share
---
